fix spacing issue in cards and href elements for navbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,7 +128,6 @@ main {
     width: 100%;
     max-width: 90%;
     margin: 0 auto;
-    margin-bottom: 1.5rem;
 }
 
 /* button */
@@ -176,6 +175,7 @@ main {
         padding-left: 1rem;
         padding-right: 1rem;
         }
+    
 }
 
 /* Laptop size */
@@ -197,8 +197,6 @@ main {
         margin-top: 0;
       }
     
-      
-    
       .card {
         width: 100%;
       }
@@ -211,4 +209,24 @@ main {
         margin: 20px auto;
         padding: 30px;
     }
+
+    .container-cards {
+        display: flex;
+        gap: 2rem;
+        padding: 0 2rem;
+        align-items: stretch;
+      }
+      
+      .left-column,
+      .right-column {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        gap: 2rem;
+        margin-top: 0;
+      }
+      
+      .card {
+        width: 100%;
+      }
 }
